Use basePath() and url() view helpers!
Original code was hardcoding paths, which is non-portable. Updated to
use basePath() for assets, url() for URIs.

--- a/view/zf-apigility-documentation-swagger/swagger-ui/list.phtml
+++ b/view/zf-apigility-documentation-swagger/swagger-ui/list.phtml
@@ -13,9 +13,10 @@
                 $view     = $this;
                 $versions = array_map(function ($version) use ($name, $view) {
                     return sprintf(
-                        '<a href="/swagger/%s-v%s">v%s</a>',
-                        $view->escapeUrl($name),
-                        $view->escapeUrl($version),
+                        '<a href="%s">v%s</a>',
+                        $view->url('zf-apigility-documentation-swagger/api', array(
+                            'api' => sprintf('%s-v%s', $name, $version),
+                        )),
                         $view->escapeHtml($version)
                     );
                 }, $api['versions']);
