--- a/view/zf-apigility-documentation-swagger/swagger-ui/show.phtml
+++ b/view/zf-apigility-documentation-swagger/swagger-ui/show.phtml
@@ -1,25 +1,26 @@
+<?php $base = $this->basePath(); ?>
 <!DOCTYPE html>
 <html>
 <head>
     <title>Swagger UI</title>
     <link href='https://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'/>
-    <link href='/zf-apigility-documentation-swagger/css/highlight.default.css' media='screen' rel='stylesheet' type='text/css'/>
-    <link href='/zf-apigility-documentation-swagger/css/screen.css' media='screen' rel='stylesheet' type='text/css'/>
-    <script type="text/javascript" src="/zf-apigility-documentation-swagger/lib/shred.bundle.js"></script>
-    <script src='/zf-apigility-documentation-swagger/lib/jquery-1.8.0.min.js' type='text/javascript'></script>
-    <script src='/zf-apigility-documentation-swagger/lib/jquery.slideto.min.js' type='text/javascript'></script>
-    <script src='/zf-apigility-documentation-swagger/lib/jquery.wiggle.min.js' type='text/javascript'></script>
-    <script src='/zf-apigility-documentation-swagger/lib/jquery.ba-bbq.min.js' type='text/javascript'></script>
-    <script src='/zf-apigility-documentation-swagger/lib/handlebars-1.0.0.js' type='text/javascript'></script>
-    <script src='/zf-apigility-documentation-swagger/lib/underscore-min.js' type='text/javascript'></script>
-    <script src='/zf-apigility-documentation-swagger/lib/backbone-min.js' type='text/javascript'></script>
-    <script src='/zf-apigility-documentation-swagger/lib/swagger.js' type='text/javascript'></script>
-    <script src='/zf-apigility-documentation-swagger/swagger-ui.js' type='text/javascript'></script>
-    <script src='/zf-apigility-documentation-swagger/lib/highlight.7.3.pack.js' type='text/javascript'></script>
+    <link href='<?php echo $base ?>/zf-apigility-documentation-swagger/css/highlight.default.css' media='screen' rel='stylesheet' type='text/css'/>
+    <link href='<?php echo $base ?>/zf-apigility-documentation-swagger/css/screen.css' media='screen' rel='stylesheet' type='text/css'/>
+    <script src="<?php echo $base ?>/zf-apigility-documentation-swagger/lib/shred.bundle.js" type="text/javascript"></script>
+    <script src='<?php echo $base ?>/zf-apigility-documentation-swagger/lib/jquery-1.8.0.min.js' type='text/javascript'></script>
+    <script src='<?php echo $base ?>/zf-apigility-documentation-swagger/lib/jquery.slideto.min.js' type='text/javascript'></script>
+    <script src='<?php echo $base ?>/zf-apigility-documentation-swagger/lib/jquery.wiggle.min.js' type='text/javascript'></script>
+    <script src='<?php echo $base ?>/zf-apigility-documentation-swagger/lib/jquery.ba-bbq.min.js' type='text/javascript'></script>
+    <script src='<?php echo $base ?>/zf-apigility-documentation-swagger/lib/handlebars-1.0.0.js' type='text/javascript'></script>
+    <script src='<?php echo $base ?>/zf-apigility-documentation-swagger/lib/underscore-min.js' type='text/javascript'></script>
+    <script src='<?php echo $base ?>/zf-apigility-documentation-swagger/lib/backbone-min.js' type='text/javascript'></script>
+    <script src='<?php echo $base ?>/zf-apigility-documentation-swagger/lib/swagger.js' type='text/javascript'></script>
+    <script src='<?php echo $base ?>/zf-apigility-documentation-swagger/swagger-ui.js' type='text/javascript'></script>
+    <script src='<?php echo $base ?>/zf-apigility-documentation-swagger/lib/highlight.7.3.pack.js' type='text/javascript'></script>
     <script type="text/javascript">
         $(function () {
             window.swaggerUi = new SwaggerUi({
-                url: "/documentation/<?php echo $this->api?>",
+                url: "<?php echo $this->url('zf-apigility-documentation', array('api' => $this->api)) ?>",
                 dom_id: "swagger-ui-container",
                 supportedSubmitMethods: ['get', 'post', 'put', 'delete'],
                 onComplete: function(swaggerApi, swaggerUi){
@@ -36,22 +37,14 @@
             window.authorizations.add("foo", new ApiKeyAuthorization('accept', 'application/vnd.swagger+json', 'header'));
             window.swaggerUi.load();
         });
-
     </script>
 </head>
-
 <body>
 <div id='header'>
     <div class="swagger-ui-wrap">
         <a id="logo" href="http://swagger.wordnik.com">swagger</a>
 
         <form id='api_selector'>
-            <div class='input icon-btn'>
-<!--                <img id="show-pet-store-icon" src="images/pet_store_api.png" title="Show Swagger Petstore Example Apis">-->
-            </div>
-            <div class='input icon-btn'>
-<!--                <img id="show-wordnik-dev-icon" src="images/wordnik_api.png" title="Show Wordnik Developer Apis">-->
-            </div>
             <div class='input'><input placeholder="http://example.com/api" id="input_baseUrl" name="baseUrl" type="text"/></div>
             <div class='input'><input placeholder="api_key" id="input_apiKey" name="apiKey" type="text"/></div>
             <div class='input'><a id="explore" href="#">Explore</a></div>
@@ -64,9 +57,6 @@
 </div>
 
 <div id="swagger-ui-container" class="swagger-ui-wrap">
-
 </div>
-
 </body>
-
 </html>
