--- a/view/zf-apigility-documentation-swagger/swagger-ui/show.phtml
+++ b/view/zf-apigility-documentation-swagger/swagger-ui/show.phtml
@@ -6,6 +6,7 @@
     <link href='https://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'/>
     <link href='<?php echo $base ?>/zf-apigility-documentation-swagger/css/highlight.default.css' media='screen' rel='stylesheet' type='text/css'/>
     <link href='<?php echo $base ?>/zf-apigility-documentation-swagger/css/screen.css' media='screen' rel='stylesheet' type='text/css'/>
+    <link href='<?php echo $base ?>/zf-apigility-documentation-swagger/css/custom.css' media='screen' rel='stylesheet' type='text/css'/>
     <script src="<?php echo $base ?>/zf-apigility-documentation-swagger/lib/shred.bundle.js" type="text/javascript"></script>
     <script src='<?php echo $base ?>/zf-apigility-documentation-swagger/lib/jquery-1.8.0.min.js' type='text/javascript'></script>
     <script src='<?php echo $base ?>/zf-apigility-documentation-swagger/lib/jquery.slideto.min.js' type='text/javascript'></script>
@@ -64,7 +65,7 @@
 
         <form id='api_selector'>
             <div class='input'><input placeholder="http://example.com/api" id="input_baseUrl" name="baseUrl" type="text"/></div>
-            <div class='input'>Authorization: <input placeholder="Enter Authorization header value here" id="auth-header-value" name="auth-header-value" type="text"/></div>
+            <div class='input'><label for="auth-header-value">Authorization:</label> <input placeholder="Enter Authorization header value here" id="auth-header-value" name="auth-header-value" type="text"/></div>
             <div class='input'><a id="explore" href="#">Explore</a></div>
         </form>
     </div>
