--- a/view/zf-apigility-documentation-swagger/list.phtml
+++ b/view/zf-apigility-documentation-swagger/list.phtml
@@ -1,3 +1,5 @@
+<h2>Swagger API Documentation</h2>
+
 <table class="table table-striped">
     <thead>
         <tr>
@@ -9,7 +11,7 @@
         $name = $api['name']; ?>
         <tr>
             <td><?php echo $this->escapeHtml($name) ?></td>
-            <td><pre><?php 
+            <td><?php 
                 $view     = $this;
                 $versions = array_map(function ($version) use ($name, $view) {
                     return sprintf(
